{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "8f1b997b-4acf-4df5-b224-0366ebd40618",
            "actions": [
                {
                    "name": "Touch_Input",
                    "type": "PassThrough",
                    "id": "b60d40ad-ab54-4265-8d2a-0915e5bccf06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch_Pressed",
                    "type": "PassThrough",
                    "id": "27689164-dcad-4bfd-b28e-ff436ed9db21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Touch_Pos",
                    "type": "PassThrough",
                    "id": "bb16f948-ef9b-42de-90b9-06cfa3ae2f0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3fb4473a-c38f-44cb-8c54-dff10a67463c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ea9f1d4-7f35-4662-acd2-7d3bd3f7b64b",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "993b0f71-115b-41b1-84f3-27f6abaab221",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch_Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}